--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
         type="text"
         class="input"
         id="input"
-        placeholder="Enter your To Do"
+        placeholder="Enter your todo"
         autocomplete="off"
       />
-      <ul class="todos" id="todos">
-        <li>My First Todo</li>
-        <li class="completed">My Second Todo</li>
-      </ul>
+
+      <ul class="todos" id="todos"></ul>
     </form>
     <small
       >Left click to toggle completed. <br />
